--- a/ios/IRKit/IRKitResources/IRPeripheralCell.xib
+++ b/ios/IRKit/IRKitResources/IRPeripheralCell.xib
@@ -67,7 +67,7 @@
 										<string key="NSFrame">{{61, 11}, {223, 21}}</string>
 										<reference key="NSSuperview" ref="359541660"/>
 										<reference key="NSWindow"/>
-										<reference key="NSNextKeyView" ref="299355430"/>
+										<reference key="NSNextKeyView" ref="697790443"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIOpaque">NO</bool>
 										<bool key="IBUIClipsSubviews">YES</bool>
@@ -100,10 +100,10 @@
 									<object class="IBUILabel" id="299355430">
 										<reference key="NSNextResponder" ref="359541660"/>
 										<int key="NSvFlags">292</int>
-										<string key="NSFrame">{{61, 29}, {223, 21}}</string>
+										<string key="NSFrame">{{61, 37}, {223, 21}}</string>
 										<reference key="NSSuperview" ref="359541660"/>
 										<reference key="NSWindow"/>
-										<reference key="NSNextKeyView" ref="697790443"/>
+										<reference key="NSNextKeyView" ref="404060247"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIOpaque">NO</bool>
 										<bool key="IBUIClipsSubviews">YES</bool>
@@ -136,7 +136,7 @@
 										<string key="NSFrame">{{275, 21}, {15, 15}}</string>
 										<reference key="NSSuperview" ref="359541660"/>
 										<reference key="NSWindow"/>
-										<reference key="NSNextKeyView"/>
+										<reference key="NSNextKeyView" ref="299355430"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIUserInteractionEnabled">NO</bool>
 										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -144,6 +144,21 @@
 											<string key="NSClassName">NSImage</string>
 											<string key="NSResourceName">icn_arrow.png</string>
 										</object>
+									</object>
+									<object class="IBUIView" id="404060247">
+										<reference key="NSNextResponder" ref="359541660"/>
+										<int key="NSvFlags">292</int>
+										<string key="NSFrame">{{0, 58}, {296, 1}}</string>
+										<reference key="NSSuperview" ref="359541660"/>
+										<reference key="NSWindow"/>
+										<reference key="NSNextKeyView"/>
+										<string key="NSReuseIdentifierKey">_NS:9</string>
+										<object class="NSColor" key="IBUIBackgroundColor">
+											<int key="NSColorSpace">1</int>
+											<bytes key="NSRGB">MC4xMjk0MTE3NjQ3IDAuMTI5NDExNzY0NyAwLjE0OTAxOTYwNzgAA</bytes>
+										</object>
+										<string key="IBUIContentStretch">{{0, 0}, {1, 0.5}}</string>
+										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 									</object>
 								</array>
 								<string key="NSFrame">{{12, 0}, {296, 58}}</string>
@@ -263,8 +278,8 @@
 								</object>
 								<float key="priority">1000</float>
 								<reference key="containingView" ref="3703055"/>
-								<int key="scoringType">8</int>
-								<float key="scoringTypeFloat">29</float>
+								<int key="scoringType">9</int>
+								<float key="scoringTypeFloat">40</float>
 								<int key="contentType">3</int>
 							</object>
 							<object class="IBNSLayoutConstraint" id="679232071">
@@ -295,8 +310,8 @@
 								</object>
 								<float key="priority">1000</float>
 								<reference key="containingView" ref="3703055"/>
-								<int key="scoringType">8</int>
-								<float key="scoringTypeFloat">29</float>
+								<int key="scoringType">9</int>
+								<float key="scoringTypeFloat">40</float>
 								<int key="contentType">3</int>
 							</object>
 							<reference ref="359541660"/>
@@ -339,20 +354,20 @@
 								<float key="scoringTypeFloat">9</float>
 								<int key="contentType">3</int>
 							</object>
-							<object class="IBNSLayoutConstraint" id="690280128">
-								<reference key="firstItem" ref="359541660"/>
+							<object class="IBNSLayoutConstraint" id="511386633">
+								<reference key="firstItem" ref="299355430"/>
 								<int key="firstAttribute">4</int>
 								<int key="relation">0</int>
-								<reference key="secondItem" ref="299355430"/>
+								<reference key="secondItem" ref="359541660"/>
 								<int key="secondAttribute">4</int>
 								<float key="multiplier">1</float>
 								<object class="IBLayoutConstant" key="constant">
-									<double key="value">8</double>
+									<double key="value">0.0</double>
 								</object>
 								<float key="priority">1000</float>
 								<reference key="containingView" ref="359541660"/>
-								<int key="scoringType">3</int>
-								<float key="scoringTypeFloat">9</float>
+								<int key="scoringType">8</int>
+								<float key="scoringTypeFloat">29</float>
 								<int key="contentType">3</int>
 							</object>
 							<object class="IBNSLayoutConstraint" id="526833835">
@@ -419,6 +434,54 @@
 								<float key="scoringTypeFloat">9</float>
 								<int key="contentType">3</int>
 							</object>
+							<object class="IBNSLayoutConstraint" id="92768802">
+								<reference key="firstItem" ref="404060247"/>
+								<int key="firstAttribute">3</int>
+								<int key="relation">0</int>
+								<reference key="secondItem" ref="359541660"/>
+								<int key="secondAttribute">3</int>
+								<float key="multiplier">1</float>
+								<object class="IBLayoutConstant" key="constant">
+									<double key="value">58</double>
+								</object>
+								<float key="priority">1000</float>
+								<reference key="containingView" ref="359541660"/>
+								<int key="scoringType">9</int>
+								<float key="scoringTypeFloat">40</float>
+								<int key="contentType">3</int>
+							</object>
+							<object class="IBNSLayoutConstraint" id="417619653">
+								<reference key="firstItem" ref="359541660"/>
+								<int key="firstAttribute">6</int>
+								<int key="relation">0</int>
+								<reference key="secondItem" ref="404060247"/>
+								<int key="secondAttribute">6</int>
+								<float key="multiplier">1</float>
+								<object class="IBLayoutConstant" key="constant">
+									<double key="value">0.0</double>
+								</object>
+								<float key="priority">1000</float>
+								<reference key="containingView" ref="359541660"/>
+								<int key="scoringType">9</int>
+								<float key="scoringTypeFloat">40</float>
+								<int key="contentType">3</int>
+							</object>
+							<object class="IBNSLayoutConstraint" id="496590522">
+								<reference key="firstItem" ref="404060247"/>
+								<int key="firstAttribute">5</int>
+								<int key="relation">0</int>
+								<reference key="secondItem" ref="359541660"/>
+								<int key="secondAttribute">5</int>
+								<float key="multiplier">1</float>
+								<object class="IBLayoutConstant" key="constant">
+									<double key="value">0.0</double>
+								</object>
+								<float key="priority">1000</float>
+								<reference key="containingView" ref="359541660"/>
+								<int key="scoringType">8</int>
+								<float key="scoringTypeFloat">29</float>
+								<int key="contentType">3</int>
+							</object>
 							<object class="IBNSLayoutConstraint" id="201570036">
 								<reference key="firstItem" ref="429180956"/>
 								<int key="firstAttribute">5</int>
@@ -455,6 +518,7 @@
 							<reference ref="697790443"/>
 							<reference ref="429180956"/>
 							<reference ref="299355430"/>
+							<reference ref="404060247"/>
 						</array>
 						<reference key="parent" ref="3703055"/>
 					</object>
@@ -651,8 +715,51 @@
 						<reference key="parent" ref="359541660"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">492</int>
-						<reference key="object" ref="690280128"/>
+						<int key="objectID">494</int>
+						<reference key="object" ref="404060247"/>
+						<array class="NSMutableArray" key="children">
+							<object class="IBNSLayoutConstraint" id="120042158">
+								<reference key="firstItem" ref="404060247"/>
+								<int key="firstAttribute">8</int>
+								<int key="relation">0</int>
+								<nil key="secondItem"/>
+								<int key="secondAttribute">0</int>
+								<float key="multiplier">1</float>
+								<object class="IBLayoutConstant" key="constant">
+									<double key="value">1</double>
+								</object>
+								<float key="priority">1000</float>
+								<reference key="containingView" ref="404060247"/>
+								<int key="scoringType">9</int>
+								<float key="scoringTypeFloat">40</float>
+								<int key="contentType">1</int>
+							</object>
+						</array>
+						<reference key="parent" ref="359541660"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">500</int>
+						<reference key="object" ref="496590522"/>
+						<reference key="parent" ref="359541660"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">504</int>
+						<reference key="object" ref="417619653"/>
+						<reference key="parent" ref="359541660"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">507</int>
+						<reference key="object" ref="92768802"/>
+						<reference key="parent" ref="359541660"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">508</int>
+						<reference key="object" ref="120042158"/>
+						<reference key="parent" ref="404060247"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">511</int>
+						<reference key="object" ref="511386633"/>
 						<reference key="parent" ref="359541660"/>
 					</object>
 				</array>
@@ -671,14 +778,17 @@
 					<reference ref="414524937"/>
 				</array>
 				<string key="323.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<array class="NSMutableArray" key="323.IBViewMetadataConstraints">
+				<array key="323.IBViewMetadataConstraints">
 					<reference ref="626515828"/>
 					<reference ref="201570036"/>
+					<reference ref="496590522"/>
+					<reference ref="417619653"/>
+					<reference ref="92768802"/>
 					<reference ref="200360036"/>
 					<reference ref="1006305657"/>
 					<reference ref="886742090"/>
 					<reference ref="526833835"/>
-					<reference ref="690280128"/>
+					<reference ref="511386633"/>
 					<reference ref="794760836"/>
 					<reference ref="487836953"/>
 				</array>
@@ -719,13 +829,22 @@
 				<string key="485.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="486.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="491.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="492.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="494.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<array key="494.IBViewMetadataConstraints">
+					<reference ref="120042158"/>
+				</array>
+				<boolean value="NO" key="494.IBViewMetadataTranslatesAutoresizingMaskIntoConstraints"/>
+				<string key="500.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="504.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="507.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="508.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="511.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			</dictionary>
 			<dictionary class="NSMutableDictionary" key="unlocalizedProperties"/>
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">493</int>
+			<int key="maxID">511</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
